--- a/src/html/index.html
+++ b/src/html/index.html
@@ -10,5 +10,6 @@
   <body>
     <include src="./partials/header.html"></include>
     <include src="./partials/page.html"></include>
+    <include src="./partials/footer.html"></include>
   </body>
 </html>
